cursor fix, jquery for ui

--- a/public/board.ejs
+++ b/public/board.ejs
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="/css/app.css">
         <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.2.45/css/materialdesignicons.min.css">
 
-        <script type="module" src="/lib/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+        <script type="module" src="/lib/app.js"></script>
     </head>
     <body>
         <div class="app">
