--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@ body{
     font-size: 16px;
 }
 
-.ui{
+.ui-new {
     position: absolute;
     top: 0;
     left: 0;
@@ -11,41 +11,124 @@ body{
     bottom: 0;
     pointer-events: none;
 }
+.ui-new .section-top {
+    position: fixed;
+    display: flex;
+    top: 20px;
+    left: 20px;
+}
+.ui-new .section-left {
+    position: fixed;
+    display: flex;
+    top: 80px;
+    left: 20px;
+}
+.spacer {
+    width: 20px;
+    height: 20px;
+}
 
 .toolbar{
-    position: fixed;
     display: flex;
     background-color: white;
     border-radius: 3px;
-    align-items: center;
     pointer-events: all;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
-.toolbar.vertical{
-    flex-direction: column;
+.toolbar.transparent {
+    background-color: transparent;
+    box-shadow: none;
 }
-.toolbar button{
+.toolbar.horizontal {
+    flex-direction: row;
+    align-items: center;
+}
+.toolbar.vertical {
+    flex-direction: column;
+    justify-content: center;
+}
+
+.toolbar-group {
+    display: flex;
+}
+.toolbar-group.horizontal { flex-direction: row; }
+.toolbar-group.vertical { flex-direction: column; }
+
+.toolbar-button {
     border: 0;
     outline: 0;
     background-color: transparent;
+    position: relative;
     font-size: 20px;
     width: 40px;
     height: 40px;
     cursor: pointer;
 }
-.toolbar button.active{
+.toolbar-button.active{
     background-color: #fc8210 !important;
     color: white !important;
 }
-.toolbar button:hover{
+.toolbar-button:hover{
     background-color: rgba(0, 0, 0, 0.1);
 }
-.toolbar .toolbar-text{
+.toolbar-button i{
+    pointer-events: none;
+}
+.toolbar.vertical > .toolbar-button:first-child {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.toolbar-button > .toolbar-button-tooltip {
+    position: absolute;
+    background-color: #ddd;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    pointer-events: none;
+    font-size: 1rem;
+    padding: 0 10px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+.toolbar-button:hover >.toolbar-button-tooltip {
+    opacity: 1;
+}
+.toolbar-button > .toolbar-button-tooltip.bottom {
+    top: 100%;
+    left: 50%;
+    margin-top: 10px;
+    transform: translateX(-50%);
+}
+.toolbar-button > .toolbar-button-tooltip.right {
+    top: 50%;
+    left: 100%;
+    margin-left: 10px;
+    transform: translateY(-50%);
+}
+
+.toolbar-popup{
+    position: relative;
+}
+.toolbar-popup-content{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    background-color: white;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.toolbar-popup:hover .toolbar-popup-content{
+    display: block;
+}
+
+.toolbar-textfield {
     position: relative;
     margin: 0 10px;
     font-weight: 600;
 }
-.toolbar .toolbar-text input{
+.toolbar-textfield input{
     display: none;
     width: 200px;
     height: 27px;
@@ -55,228 +138,69 @@ body{
     font-weight: 600;
     font-size: 1rem;
 }
-.toolbar .toolbar-text span{
+.toolbar-textfield span{
     cursor: pointer;
 }
-.toolbar .separator{
+
+.toolbar-separator{
     width: 1px;
     height: 20px;
     margin: 10px 5px;
     background-color: rgba(0, 0, 0, 0.1);
 }
-.toolbar.vertical .separator{
+.toolbar.vertical .toolbar-separator{
     width: 20px;
     height: 1px;
     margin: 5px 10px;
     background-color: rgba(0, 0, 0, 0.1);
 }
-.button-list{
-    display: flex;
-}
-.toolbar.vertical .button-list{
-    flex-direction: column;
-    width: 100%;
-}
-.toolbar > #grab{
-    position: relative;
-    width: 10px;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.2);
-    cursor: move;
-}
-.toolbar > #grab::after{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.2);
-    width: 1px;
-    height: 10px;
-}
-.toolbar.vertical > #grab{
-    width: 40px;
-    height: 10px;
-}
-.toolbar.vertical > #grab::after{
-    width: 10px;
-    height: 1px;
-}
-.viewsettings span{
-    display: block;
-    width: 40px;
-    font-size: 10px;
-    text-align: center;
-    opacity: 0.5;
-    font-weight: 600;
-    margin: 5px 0;
-}
 
-.horizontal-layout{
-    display: flex;
-}
-
-.popup{
-    position: relative;
-}
-.popup .popup-content{
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 100%;
+.toolbar-user {
+    width: 30px;
+    height: 30px;
+    margin: 5px 5px 0 0;
+    border-radius: 50%;
     background-color: white;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+    user-select: none;
+    -moz-user-select: -moz-none;
+    pointer-events: none;
 }
-.popup:hover .popup-content{
-    display: block;
+.toolbar#users .toolbar-button{
+    background-color: transparent !important;
 }
-.colorcircle{
+
+.toolbar#users .toolbar-button:not(:first-child) {
+    margin-left: -20px;
+    transition: margin-left 0.2s ease-in-out;
+}
+.toolbar#users:hover .toolbar-button:not(:first-child) {
+    margin-left: 0;
+}
+
+.toolbar-color{
     display: inline-block;
     width: 20px;
     height: 20px;
     border-radius: 100px;
     background-color: currentColor;
     border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-#toolbox{
-    top: 80px;
-    left: 20px;
-    width: 40px;
-}
-#boardactions{
-    top: 20px;
-    left: 20px;
-    height: 40px;
-}
-#settings-button{
-    left: 20px;
-    bottom: 20px;
-}
-
-.panels{
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     pointer-events: none;
 }
-
-.panel{
-    display: none;
-    pointer-events: all;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50vw;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    box-sizing: border-box;
-}
-.panel .panel-content{
-    max-height: 60vh;
-    overflow: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    margin: 20px 0;
-}
-.panel .panel-content::-webkit-scrollbar {
-    display: none;
-}
-.panel .panel-close{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border: 0;
-    outline: 0;
-    font-size: 20px;
-    color: black;
-    background-color: transparent;
-    cursor: pointer;
-    padding: 5px;
-    border-radius: 5px;
-    transition: background-color 0.2s;
-}
-.panel .panel-close:hover{
-    background-color: rgba(0, 0, 0, 0.1);
-}
-.panel h1{
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    letter-spacing: 2px;
-}
-
-.panel .field label{
+.toolbar-text{
     display: block;
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    font-weight: 600;
-    letter-spacing: 2px;
+    font-size: 10px;
+    text-align: center;
     opacity: 0.5;
-    padding-bottom: 5px;
-}
-.panel .field input{
-    border: 0;
-    outline: 0;
-    background-color: transparent;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-    font-size: 1.2rem;
-    width: 100%;
-}
-.panel .field input:hover{
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-}
-.panel .field input:focus{
-    border-bottom: 2px solid #fc8210;
+    font-weight: 600;
+    margin: 5px 5px;
 }
 
-.panel .button{
-    position: relative;
-    display: flex;
-    align-items: center;
-    border: 0;
-    outline: 0;
-    background-color: rgba(0, 0, 0, 0.2);
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 2px;
-    padding: 7px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    overflow: hidden;
-}
-.panel .button.icon-button i{
-    margin-right: 10px;
-    font-size: 20px;
-}
-.panel .button:hover{
-    background-color: #fc8210;
-}
-.panel .button::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    width: 0;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 5px;
-}
-.panel .button.ripple{
-    background-color: #fc8210 !important;
-}
-.panel .button.ripple::after{
-    animation-name: button-ripple;
-    animation-duration: 0.5s;
-}
 
 .range{
     padding: 10px;
@@ -329,18 +253,4 @@ body{
     height: 5px;
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 100px;
-}
-
-@keyframes button-ripple{
-    from{
-        width: 0;
-        opacity: 1;
-    }
-    75%{
-        opacity: 1;
-    }
-    to{
-        width: 100%;
-        opacity: 0;
-    }
 }
