paste bounding box fix | aspect ratio scale | ui changes

--- a/public/board.ejs
+++ b/public/board.ejs
@@ -37,7 +37,7 @@
                 <div class="section-left">
                     <div id="tools" class="toolbar vertical">
                         <button class="toolbar-button" action="tool-select"><i class="mdi mdi-select"></i></button>
-                        <button class="toolbar-button" action="tool-pencil" class="active"><i class="mdi mdi-pencil"></i></button>
+                        <button class="toolbar-button active" action="tool-pencil"><i class="mdi mdi-pencil"></i></button>
                         <button class="toolbar-button" action="tool-eraser"><i class="mdi mdi-eraser"></i></button>
                         <!-- <button class="toolbar-button" action="tool-text"><i class="mdi mdi-format-title"></i></button> -->
                         <div class="toolbar-popup">
@@ -75,7 +75,7 @@
                                 <div class="toolbar-group horizontal">
                                     <div class="range">
                                         <span class="u-noselect">Stroke size</span>
-                                        <input id="stroke-size" type="range" min="1" max="20" step="1" value="2">
+                                        <input id="stroke-size" type="range" min="1" max="20" step="1" value="3">
                                     </div>
                                 </div>
                             </div>
