--- a/public/css/app.css
+++ b/public/css/app.css
@@ -158,7 +158,7 @@ body{
 .toolbar-user {
     width: 30px;
     height: 30px;
-    margin: 5px 5px 0 0;
+    margin: 5px 5px;
     border-radius: 50%;
     background-color: white;
     position: relative;
