--- a/public/css/util.css
+++ b/public/css/util.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Mukta", "Open Sans", sans-serif;
 }
 *::-moz-focus-inner {
     border: 0;
+}
+.ui, input{
+    font-family: "Mukta", "Open Sans", sans-serif;
 }
 
 .u-hide{
