--- a/public/css/app.css
+++ b/public/css/app.css
@@ -277,3 +277,30 @@ body{
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 100px;
 }
+
+
+.overlays {
+    pointer-events: none;
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.start-hint{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    opacity: 0.2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+}
+.start-hint i{
+    font-size: 70px;
+    margin-bottom: 20px;
+}
