--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,22 +1,36 @@
 body{
     background-color: #222;
     font-size: 16px;
+    user-select: none;
+    -moz-user-select: none;
 }
 
 .container{
     display: flex;
-    height: 75vh;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.banner {
+    margin: 15vh 0;
 }
 
 h1{
     font-size: 5rem;
     margin: 0 0 1rem 0;
     color: white;
-    user-select: none;
-    -moz-user-select: none;
+    text-align: center;
+}
+
+h2{
+    color: white;
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.actions {
+    display: flex;
+    align-items: center;
 }
 
 .button{
@@ -53,30 +67,8 @@ h1{
 .separator{
     position: relative;
     text-align: center;
-    width: 100%;
     color: white;
-    margin: 1rem 0;
-    width: 220px;
-    user-select: none;
-    -moz-user-select: none;
-}
-.separator::before{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 40%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
-}
-.separator::after{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    right: 0;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.2);
+    margin: 10px 30px;
 }
 
 label{
@@ -84,6 +76,11 @@ label{
 }
 
 .public-boards{
+    width: 100%;
+    margin-bottom: 15vh;
+}
+
+.board-grid{
     display: flex;
     width: 50%;
     margin: 0 auto;
@@ -93,7 +90,7 @@ label{
 
 .board {
     width: 300px;
-    background-color: #686868;
+    background-color: #444;
     box-shadow: 0 0 0 0 #444444;
     border-radius: 10px;
     overflow: hidden;
@@ -113,4 +110,29 @@ label{
 .board .board-name{
     color: white;
     padding: 10px 20px;
+}
+
+.board-grid-empty {
+    color: rgba(255, 255, 255, 0.2);
+}
+
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    background-color: #222;
+    opacity: 0;
+}
+
+
+@media only screen and (max-width: 720px) {
+    .actions {
+        flex-direction: column;
+    }
 }
