--- a/public/index.ejs
+++ b/public/index.ejs
@@ -10,6 +10,36 @@
     </head>
     <body>
         <div class="container">
+            <div class="banner">
+                <h1>Greyboard</h1>
+                <div class="actions">
+                    <a href="/new" class="button primary" action="new_board">Start with a fresh board</a>
+                    <span class="separator">or</span>
+                    <div class="button">
+                        <input id="baord_file" class="u-hide" type="file" name="baord_file">
+                        <label for="baord_file">Load an existing board</label>
+                    </div>
+                </div>
+            </div>
+            <div class="public-boards">
+                <h2>Public boards</h2>
+                <div class="board-grid">
+                    <% if(publicBoards.length > 0) { for(var i=0; i < publicBoards.length; i++) {%>
+                        <a href="/b/<%= publicBoards[i].id %>" class="board">
+                            <div class="board-thumbnail">
+                                <i class="mdi mdi-bulletin-board"></i>
+                            </div>
+                            <div class="board-name"><%= publicBoards[i].name %></div>
+                        </a>
+                    <% } } else { %>
+                        <div class="board-grid-empty">There are no public boards at this moment...</div>
+                    <% } %>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- <div class="container">
             <h1>Greyboard</h1>
             <a href="/new" class="button primary" action="new_board">Start with a fresh board</a>
             <span class="separator">or</span>
@@ -28,5 +58,9 @@
                 </a>
             <% } %>
         </div>
+
+        <div class="loading">
+            <img src="./images/loading.gif" alt="loading">
+        </div> -->
     </body>
 </html>
