--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,7 @@ body{
     font-size: 16px;
     user-select: none;
     -moz-user-select: none;
+    color: white;
 }
 
 .container{
@@ -13,17 +14,18 @@ body{
 
 .banner {
     margin: 15vh 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
     font-size: 5rem;
     margin: 0 0 1rem 0;
-    color: white;
     text-align: center;
 }
 
 h2{
-    color: white;
     text-align: center;
     margin: 0 0 1rem 0;
 }
@@ -43,11 +45,11 @@ h2{
     padding: 10px 30px;
     border-radius: 100px;
     font-size: 1rem;
-    color: white;
     text-decoration: none;
     text-align: center;
     cursor: pointer;
     z-index: 1;
+    color: white;
     transform: translateY(0);
     box-shadow: 0 0 0 0 #444444;
     transition: transform 0.2s, box-shadow 0.2s;
@@ -67,7 +69,6 @@ h2{
 .separator{
     position: relative;
     text-align: center;
-    color: white;
     margin: 10px 30px;
 }
 
@@ -108,7 +109,6 @@ label{
     color: rgba(255, 255, 255, 0.2);
 }
 .board .board-name{
-    color: white;
     padding: 10px 20px;
 }
 
@@ -129,7 +129,28 @@ label{
     background-color: #222;
     opacity: 0;
 }
+.code404 {
+    position: relative;
+    margin: 5rem 0;
+}
+.code404:before{
+    content: "404";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.1;
+    text-align: center;
+    font-size: 20rem;
+    pointer-events: none;
+}
+.code404-desc{
+    margin-bottom: 20px;
+}
 
+.logo-loading{
+    margin-left: 70px;
+}
 
 @media only screen and (max-width: 720px) {
     .actions {
