--- a/public/board.ejs
+++ b/public/board.ejs
@@ -40,8 +40,9 @@
                         <button class="toolbar-button" data-action="tool-select"><i class="mdi mdi-select"></i></button>
                         <button class="toolbar-button active" data-action="tool-pencil"><i class="mdi mdi-pencil"></i></button>
                         <button class="toolbar-button" data-action="tool-eraser"><i class="mdi mdi-eraser"></i></button>
+                        <button class="toolbar-button" data-action="tool-text"><i class="mdi mdi-format-title"></i></button>
                         <div class="toolbar-popup">
-                            <button class="toolbar-button" data-action="popup-shapes"><i class="mdi mdi-shape"></i></button>
+                            <button class="toolbar-button"><i class="mdi mdi-shape"></i></button>
                             <div class="toolbar-popup-content">
                                 <div class="toolbar-group horizontal">
                                     <button class="toolbar-button" data-action="tool-rectangle"><i class="mdi mdi-rectangle-outline"></i></button>
@@ -54,7 +55,7 @@
                             </div>
                         </div>
                         <div class="toolbar-popup">
-                            <button class="toolbar-button" data-action="popup-colors"><i class="mdi mdi-palette"></i></button>
+                            <button class="toolbar-button"><i class="mdi mdi-palette"></i></button>
                             <div class="toolbar-popup-content">
                                 <div class="toolbar-group horizontal">
                                     <button class="toolbar-button active" data-action="set-color" data-color="#FAFAFA" style="color: #FAFAFA !important"><div class="toolbar-color"></div></button>
@@ -110,6 +111,7 @@
                     <span>Start drawing anywhere and share with others.</span>
                 </div>
             </div>
+            <textarea id="text-tool-textarea" autocapitalize="false" autocomplete="false" spellcheck="false"></textarea>
         </div>
     </body>
 </html>
