--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,6 +228,7 @@ body{
 .range{
     padding: 10px;
     width: 100%;
+    min-width: 220px;
 }
 .range span{
     display: block;
@@ -303,4 +304,17 @@ body{
 .start-hint i{
     font-size: 70px;
     margin-bottom: 20px;
+}
+
+#text-tool-textarea{
+    position: fixed;
+    z-index: 99;
+    width: 100vw;
+    height: 100vh;
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+    /* margin-top: -0.15em; */
+    font-family: Arial;
+    line-height: 1em;
 }
