--- a/public/board.ejs
+++ b/public/board.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/app.css">
         <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+        <link rel="icon" href="/images/icon.png">
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
