--- a/public/board404.ejs
+++ b/public/board404.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+        <link rel="icon" href="/images/icon.png">
     </head>
     <body>
         <div class="container">
