--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.2.45/css/materialdesignicons.min.css">
-        
+        <link rel="icon" href="/images/icon.png">
+
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script type="module" src="./lib/index.js"></script>
     </head>
