UI improvements for small screens

--- a/public/board.ejs
+++ b/public/board.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Greyboard | <%= board.name %></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/app.css">
