--- a/public/css/index.css
+++ b/public/css/index.css
@@ -114,6 +114,7 @@ label{
 }
 
 .board-grid-empty {
+    text-align: center;
     color: rgba(255, 255, 255, 0.2);
 }
 
@@ -154,6 +155,9 @@ label{
 }
 
 @media only screen and (max-width: 720px) {
+    h1 {
+        font-size: 3rem;
+    }
     .actions {
         flex-direction: column;
     }
