--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Greyboard</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.2.45/css/materialdesignicons.min.css">
