added scale to export options

--- a/public/board.ejs
+++ b/public/board.ejs
@@ -117,6 +117,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="export-settings">
+                                <div class="spinbox"><label for="export-setting-scale">Scale</label><input id="export-setting-scale" type="number" min="1" max="10" value="1"></div>
+                            </div>
                             <button data-action="export-png" class="button primary">Export PNG</button>
                         </div>
                     </div>
