--- a/public/css/app.css
+++ b/public/css/app.css
@@ -379,14 +379,13 @@ body{
 #text-tool-textarea{
     position: fixed;
     z-index: 99;
-    width: 100vw;
-    height: 100vh;
     border: 0;
     outline: 0;
     background-color: transparent;
     /* margin-top: -0.15em; */
     font-family: Arial;
     line-height: 1em;
+    resize: none;
 }
 
 .export-preview-row {
